@@ -68,18 +68,27 @@ int CheckFile(const char* file)
 /* also should have return value reflect success or failure.     */
 void LoadLang(void)
 {
-  const char *s1;
+  char *s1, *s2, *s3, *s4;
 
   s1 = setlocale(LC_ALL, settings.theme_locale_name);
+  s2 = bindtextdomain(PACKAGE, TUXLOCALE);
+  s3 = bind_textdomain_codeset(PACKAGE, "UTF-8");
+  s4 = textdomain(PACKAGE);
 
   DEBUGCODE
   {
+    fprintf(stderr, "PACKAGE = %s\n", PACKAGE);
+    fprintf(stderr, "TUXLOCALE = %s\n", TUXLOCALE);
     fprintf(stderr, "setlocale(LC_ALL, %s) returned: %s\n", settings.theme_locale_name, s1);
+    fprintf(stderr, "bindtextdomain(PACKAGE, TUXLOCALE) returned: %s\n", s2);
+    fprintf(stderr, "bind_textdomain_codeset(PACKAGE, \"UTF-8\") returned: %s\n", s3);
+    fprintf(stderr, "textdomain(PACKAGE) returned: %s\n", s4);
+    fprintf(stderr, "gettext(\"Fish\"): %s\n\n", gettext("Fish"));
+    fprintf(stderr, "After gettext() call\n");
   }
-
   return;
-
 }
+
 
 int max(int n1, int n2)
 {
@@ -268,17 +277,18 @@ SDL_Surface* LoadImage(const char* datafile, int mode)
       DEBUGCODE { fprintf(stderr, "Warning: graphics file %s could not be loaded\n", fn);}
   }
 
+  /* NOTE changed this so we just return NULL instead of exiting - DSB
   /* Couldn't load image - action depends on whether image is essential: */
   if (!tmp_pic)
   {
-    if (mode & IMG_NOT_REQUIRED)
+//    if (mode & IMG_NOT_REQUIRED)
     { 
 //      settings.debug_on = oldDebug;
+      fprintf(stderr, "Warning - could not load graphics file %s\n", datafile);
       return NULL;
     }
 
-    fprintf(stderr, "ERROR could not load required graphics file %s\n", datafile);
-    exit(1);
+//    exit(1);
   }
 
 
