@@ -1,3 +1,9 @@
+10 Jan 2009 - svn revision 830
+[ David Bruce <davidstuartbruce@gmail.com> ]
+        - adaptation of menu code for lessons activity so as to be consistent with
+          rest of menus.
+
+
 08 Jan 2009 - svn revision 830
 [ David Bruce <davidstuartbruce@gmail.com> ]
         - adaptation of menu code for lessons activity so as to be consistent with
